fix: hide details marker on Safari (refs SFKUI-6764)

--- a/src/style/_navigation.scss
+++ b/src/style/_navigation.scss
@@ -96,5 +96,9 @@
             margin-bottom: 0;
             margin-left: 1rem;
         }
+
+        summary::-webkit-details-marker {
+            display: none;
+        }
     }
 }
